--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Guaranty",
+  "name": "guaranty",
   "description": "a super lightweight promise library for node",
   "version": "0.1.0",
   "homepage": "https://github.com/RichardBsolut/guaranty",
